--- a/source/_posts/rails/入门.md
+++ b/source/_posts/rails/入门.md
@@ -80,3 +80,9 @@ class Article < ApplicationRecord
                     length: { minimum: 5 }
 end
  ```
+
+ # controller 增加前缀 
+
+ ```
+ rails g controller 'api/v1/users' 
+ ```
