删除标签分类

--- a/source/_posts/rails/环境搭建.md
+++ b/source/_posts/rails/环境搭建.md
@@ -1,8 +1,6 @@
 ---
 title: RVM is not a function
-tags:
-  - Ruby
-  - Ruby on Rails
+tags: 编程相关
 abbrlink: dcc8e7ab
 date: 2022-06-02 08:54:09
 ---
