--- a/source/_posts/tool/使用第三方授权登录自己的网站.md
+++ b/source/_posts/tool/使用第三方授权登录自己的网站.md
@@ -1,11 +1,6 @@
 ---
 title: 使用第三方授权登录自己的网站
-tags:
-  - gitee
-  - github
-  - email
-  - wechat
-categories: 工具
+tags: 编程相关
 abbrlink: e44222ec
 date: 2021-09-10 21:12:57
 ---
